--- a/index.html
+++ b/index.html
@@ -100,9 +100,10 @@
     </div>
   </div>
 </section>
-
-<!-- Scripts -->
+  
+  <!-- Scripts -->
 <script>
+  // Your scroll transition script (already in your file)
   const header = document.querySelector('.main-header');
   const welcome = document.querySelector('.welcome-section');
   const whyUs = document.querySelector('#why-us');
@@ -140,7 +141,6 @@
     let progressToBlack = getProgress(whyUsStart, whyUsEnd, scrollY);
     let progressToPurple = getProgress(contactStart, contactEnd, scrollY);
 
-    // Combine both transitions
     let finalProgress = 0;
 
     if (scrollY < contactStart) {
@@ -149,7 +149,6 @@
       finalProgress = 1 - progressToPurple;
     }
 
-    // Blend and apply
     const blendedColor = blendColor(purpleRGB, blackRGB, finalProgress);
     header.style.backgroundColor = blendedColor;
     welcome.style.backgroundColor = blendedColor;
@@ -161,6 +160,25 @@
     blackLogos.forEach(logo => logo.style.opacity = finalProgress);
   });
 </script>
+
+<!-- ✨ New: Show content on scroll -->
+<script>
+  const hiddenElements = document.querySelectorAll('.hidden');
+
+  const observer = new IntersectionObserver((entries) => {
+    entries.forEach((entry) => {
+      if (entry.isIntersecting) {
+        entry.target.classList.add('visible');
+        entry.target.classList.remove('hidden');
+      }
+    });
+  }, {
+    threshold: 0.1
+  });
+
+  hiddenElements.forEach((el) => observer.observe(el));
+</script>
+
 
   
 </body>
