--- a/index.html
+++ b/index.html
@@ -132,9 +132,8 @@
     const vh = window.innerHeight;
 
     // 🎯 Black transition completes when Why Us is centered
-    const whyUsCenter = whyUs.offsetTop + whyUs.offsetHeight / 2 - vh / 2;
-    const whyUsStart = whyUsCenter - vh / 3;
-    const whyUsEnd = whyUsCenter + vh / 3;
+    const whyUsStart = 0; // start scrolling
+    const whyUsEnd = whyUs.offsetTop - vh * (1 / 3);
 
     // 🎯 Purple transition completes before end of Contact
     const contactStart = contact.offsetTop - vh;
