--- a/index.html
+++ b/index.html
@@ -50,7 +50,12 @@
   <!-- WHY US SECTION -->
   <section id="why-us" class="why-us-section">
     <div class="why-us-content hidden">
-      <h2>Why Choose Us</h2>
+      <div class="specialize-logo-wrapper">
+        <div class="specialize-line"></div>
+        <img src="images/Logo-Black.png" alt="Logo" class="specialize-logo" />
+        <div class="specialize-line"></div>
+      </div>
+      <h2 class="specialize-title">Why Choose Us</h2>
       <p>At Mira Creations, we specialize in bringing your vision to life with thoughtfully curated decor and jewelry. Whether you're planning a wedding, cultural celebration, or special event, we provide personalized service, premium craftsmanship, and timeless designs that reflect your style. With a deep understanding of tradition and a flair for the modern, we make every detail count, so you can focus on making memories.</p>
     </div>
   </section>
@@ -83,7 +88,12 @@
 <!-- Contact Section -->
 <section id="contact" class="contact-section">
   <div class="contact-content hidden">
-    <h2 class="contact-title">Contact Us</h2>
+    <div class="specialize-logo-wrapper">
+      <div class="specialize-line"></div>
+      <img src="images/Logo-Black.png" alt="Logo" class="specialize-logo" />
+      <div class="specialize-line"></div>
+    </div>
+    <h2 class="specialize-title">Contact Us</h2>
 
     <form action="https://formsubmit.io/send/lakhbir-kv@hotmail.com" method="POST" class="contact-form">
       <input type="text" name="name" placeholder="Your Name" required />
