--- a/index.html
+++ b/index.html
@@ -32,11 +32,13 @@
   </header>
 
   <!-- WELCOME SECTION -->
-  <section class="welcome-section">
- <div class="logo-container welcome-logo-container">
-  <img src="images/Logo-Purple.png" class="welcome-logo purple-logo" />
-  <img src="images/Logo-Black.png" class="welcome-logo black-logo" />
-</div>
+<section class="welcome-section">
+  <div class="welcome-spacer"></div>
+  <div class="welcome-content">
+    <div class="logo-container welcome-logo-container">
+      <img src="images/Logo-Purple.png" class="welcome-logo purple-logo" />
+      <img src="images/Logo-Black.png" class="welcome-logo black-logo" />
+    </div>
     <h1 class="welcome-title">Welcome to Mira Creations</h1>
     <h2 class="welcome-subtitle">Your trusted source for Premium Event Decor and Elegant Jewelry</h2>
     <div class="scroll-indicator">
@@ -45,7 +47,10 @@
         <span class="down-arrow">&#x25BC;</span>
       </a>
     </div>
-  </section>
+  </div>
+  <div class="welcome-footer-spacer"></div>
+</section>
+
 
   <!-- WHY US SECTION -->
   <section id="why-us" class="why-us-section">
