--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
   </header>
 
-  <!-- WELCOME SECTION -->
+<!-- WELCOME SECTION -->
 <section class="welcome-section">
   <div class="welcome-spacer"></div>
   <div class="welcome-content">
@@ -51,30 +51,31 @@
   <div class="welcome-footer-spacer"></div>
 </section>
 
+<!-- DIVIDER BETWEEN WELCOME & WHY US -->
+<div class="section-divider">
+  <div class="specialize-line"></div>
+  <img src="images/Logo-Black.png" alt="Logo" class="specialize-logo" />
+  <div class="specialize-line"></div>
+</div>
 
-  <!-- WHY US SECTION -->
-  <section id="why-us" class="why-us-section">
-    <div class="why-us-content hidden">
-      <div class="specialize-logo-wrapper">
-        <div class="specialize-line"></div>
-        <img src="images/Logo-Black.png" alt="Logo" class="specialize-logo" />
-        <div class="specialize-line"></div>
-      </div>
-      <h2 class="specialize-title">Why Choose Us</h2>
-      <p>At Mira Creations, we specialize in bringing your vision to life with thoughtfully curated decor and jewelry. Whether you're planning a wedding, cultural celebration, or special event, we provide personalized service, premium craftsmanship, and timeless designs that reflect your style. With a deep understanding of tradition and a flair for the modern, we make every detail count, so you can focus on making memories.</p>
-    </div>
-  </section>
+<!-- WHY US SECTION -->
+<section id="why-us" class="why-us-section">
+  <div class="why-us-content hidden">
+    <h2 class="specialize-title">Why Choose Us</h2>
+    <p>At Mira Creations, we specialize in bringing your vision to life with thoughtfully curated decor and jewelry. Whether you're planning a wedding, cultural celebration, or special event, we provide personalized service, premium craftsmanship, and timeless designs that reflect your style. With a deep understanding of tradition and a flair for the modern, we make every detail count, so you can focus on making memories.</p>
+  </div>
+</section>
 
+<!-- DIVIDER BETWEEN WHY US & SERVICES -->
+<div class="section-divider">
+  <div class="specialize-line"></div>
+  <img src="images/Logo-Black.png" alt="Logo" class="specialize-logo" />
+  <div class="specialize-line"></div>
+</div>
 
 <!-- SERVICES SECTION -->
 <section id="services" class="specialize-section">
-  <div class="specialize-content hidden"> <!-- Animation applied here -->
-    <div class="specialize-logo-wrapper">
-      <div class="specialize-line"></div>
-      <img src="images/Logo-Black.png" alt="Logo" class="specialize-logo" />
-      <div class="specialize-line"></div>
-    </div>
-
+  <div class="specialize-content hidden">
     <h2 class="specialize-title">We Specialize In</h2>
 
     <div class="specialize-cards">
@@ -86,18 +87,20 @@
       <div class="card" style="background-image: url('images/Card6.jpg');"><span>Table & Centrepiece Styling</span></div>
     </div>
 
-     <a href="products.html" class="specialize-button">Check Out Our Gallery</a>
+    <a href="products.html" class="specialize-button">Check Out Our Gallery</a>
   </div>
 </section>
 
-<!-- Contact Section -->
+<!-- DIVIDER BETWEEN SERVICES & CONTACT -->
+<div class="section-divider">
+  <div class="specialize-line"></div>
+  <img src="images/Logo-Black.png" alt="Logo" class="specialize-logo" />
+  <div class="specialize-line"></div>
+</div>
+
+<!-- CONTACT SECTION -->
 <section id="contact" class="contact-section">
   <div class="contact-content hidden">
-    <div class="specialize-logo-wrapper">
-      <div class="specialize-line"></div>
-      <img src="images/Logo-Black.png" alt="Logo" class="specialize-logo" />
-      <div class="specialize-line"></div>
-    </div>
     <h2 class="specialize-title">Contact Us</h2>
 
     <form action="https://formsubmit.io/send/lakhbir-kv@hotmail.com" method="POST" class="contact-form">
