--- a/index.html
+++ b/index.html
@@ -118,6 +118,18 @@
     </div>
   </div>
 </section>
+
+<footer class="site-footer">
+  <div class="footer-content">
+    <p>&copy; 2025 Mira Creations. All rights reserved.</p>
+    <div class="footer-links">
+      <a href="#about">About</a>
+      <a href="#gallery">Gallery</a>
+      <a href="#packages">Packages</a>
+      <a href="#contact">Contact</a>
+    </div>
+  </div>
+</footer>
   
   <!-- Scripts -->
 <script>
