--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
   </div>
 </section>
 
+<!-- FOOTER SECTION -->
 <footer class="site-footer">
   <div class="footer-content">
     <p>&copy; 2025 Mira Creations. All rights reserved.</p>
@@ -130,7 +131,27 @@
     </div>
   </div>
 </footer>
-  
+
+<!-- FLOATING CONTACT TAB -->
+<div class="floating-tab" id="contactTab">
+  <span>Contact</span>
+</div>
+
+<!-- SLIDING CONTACT CARD -->
+<div class="contact-slideout" id="contactSlideout">
+  <div class="slideout-header">
+    <img src="images/Logo-Purple.png" alt="Mira Creations Logo" class="slideout-logo" />
+    <button id="closeSlideout">&times;</button>
+  </div>
+  <div class="slideout-content">
+    <h3>Mira Creations</h3>
+    <p><strong>Location:</strong> Edmonton, Alberta</p>
+    <p><strong>Phone:</strong> 587-709-0058</p>
+    <p><strong>Email:</strong> <a href="mailto:lakhbir-kv@hotmail.com">lakhbir-kv@hotmail.com</a></p>
+    <p><strong>Instagram:</strong> <a href="https://instagram.com/miracreations1" target="_blank">@miracreations1</a></p>
+  </div>
+</div>
+
   <!-- Scripts -->
 <script>
   const header = document.querySelector('.main-header');
@@ -214,6 +235,26 @@
   hiddenElements.forEach(el => observer.observe(el));
 </script>
 
+<script>
+  const tab = document.getElementById('contactTab');
+  const slideout = document.getElementById('contactSlideout');
+  const closeBtn = document.getElementById('closeSlideout');
+
+  tab.addEventListener('click', () => {
+    slideout.classList.add('active');
+  });
+
+  closeBtn.addEventListener('click', () => {
+    slideout.classList.remove('active');
+  });
+
+  // Optional: close slideout if clicked outside
+  window.addEventListener('click', (e) => {
+    if (slideout.classList.contains('active') && !slideout.contains(e.target) && !tab.contains(e.target)) {
+      slideout.classList.remove('active');
+    }
+  });
+</script>
 
 
   
