--- a/index.html
+++ b/index.html
@@ -126,30 +126,21 @@
   </div>
 </footer>
 
-<!-- Contact Ribbon Tab -->
-<div class="contact-ribbon-wrapper">
-  <span class="ribbon-label">Contact Info</span>
-  <span class="ribbon-arrow">➰</span>
-  <div class="floating-ribbon" id="contactTab"></div>
+<!-- Floating Contact Ribbon + Arrow -->
+<div class="contact-tab-wrapper" id="contactTab">
+  <img src="images/arrow-white.png" alt="Arrow" class="contact-arrow" />
+  <span class="contact-label">Contact Information</span>
+  <div class="contact-tab"></div>
 </div>
 
-<!-- Slide-in Contact Panel -->
-<div class="contact-slidein" id="contactSlideout">
-  <div class="slidein-header">
-    <img src="images/Logo-Purple.png" alt="Mira Creations Logo" class="slidein-logo" />
-    <button id="closeSlideout">&times;</button>
-  </div>
-  <div class="slidein-content">
-    <h3>Mira Creations</h3>
+<!-- Overlay and Popup Card -->
+<div class="contact-overlay" id="contactOverlay">
+  <div class="contact-popup">
+    <h3>Contact Information</h3>
     <p><strong>Location:</strong> Edmonton, Alberta</p>
     <p><strong>Phone:</strong> <a href="tel:5877090058">587-709-0058</a></p>
     <p><strong>Email:</strong> <a href="mailto:lakhbir-kv@hotmail.com">lakhbir-kv@hotmail.com</a></p>
     <p><strong>Instagram:</strong> <a href="https://instagram.com/miracreations1" target="_blank">@miracreations1</a></p>
-    <div class="social-icons">
-      <a href="https://instagram.com/miracreations1" target="_blank"><img src="images/instagram.svg" alt="Instagram"></a>
-      <a href="mailto:lakhbir-kv@hotmail.com"><img src="images/email.svg" alt="Email"></a>
-      <a href="tel:5877090058"><img src="images/phone.svg" alt="Phone"></a>
-    </div>
   </div>
 </div>
 
@@ -237,24 +228,16 @@
 </script>
 
 <script>
-  const tab = document.getElementById('contactTab');
-  const slideout = document.getElementById('contactSlideout');
-  const closeBtn = document.getElementById('closeSlideout');
+  const contactTab = document.getElementById('contactTab');
+  const contactOverlay = document.getElementById('contactOverlay');
 
-  tab.addEventListener('click', () => {
-    slideout.classList.add('active');
+  contactTab.addEventListener('click', () => {
+    contactOverlay.classList.add('active');
   });
 
-  closeBtn.addEventListener('click', () => {
-    slideout.classList.remove('active');
-  });
-
-  // Optional: close on click outside
   window.addEventListener('click', (e) => {
-    if (slideout.classList.contains('active') &&
-        !slideout.contains(e.target) &&
-        !tab.contains(e.target)) {
-      slideout.classList.remove('active');
+    if (contactOverlay.classList.contains('active') && !e.target.closest('.contact-popup') && !contactTab.contains(e.target)) {
+      contactOverlay.classList.remove('active');
     }
   });
 </script>
