--- a/index.html
+++ b/index.html
@@ -128,16 +128,16 @@
 
 <!-- Floating Contact Ribbon + Arrow -->
 <div class="contact-tab-wrapper" id="contactTab">
-  <!-- Contact Info Label above arrow start -->
+  <!-- Label above the arrow, horizontally placed -->
   <div class="contact-label-horizontal">Contact Information</div>
 
-  <!-- Arrow SVG -->
+  <!-- Modern bent arrow with proper arrowhead -->
   <svg class="contact-arrow" width="100" height="60" viewBox="0 0 100 60" xmlns="http://www.w3.org/2000/svg">
     <path d="M0,20 Q10,50 25,48 H85" stroke="white" stroke-width="4" fill="none" stroke-linecap="round" />
     <polyline points="85,42 100,48 85,54" fill="none" stroke="white" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"/>
   </svg>
 
-  <!-- Yellow Tab -->
+  <!-- The yellow tab that opens the contact modal -->
   <div class="contact-tab"></div>
 </div>
 
