--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>MiraCreations</title>
   <link rel="stylesheet" href="style.css" />
-  <style>
-  @import url('https://fonts.googleapis.com/css2?family=Bradley+Hand&display=swap');
-  </style>
+  <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet" />
 </head>
 <body>
 
