--- a/index.html
+++ b/index.html
@@ -129,13 +129,13 @@
 
 <!-- Floating Contact Ribbon + Arrow -->
 <div class="contact-tab-wrapper" id="contactTab">
-  <!-- Contact Label on top of arrow.png -->
-  <div class="contact-label-over-arrow">Contact Information</div>
+  <!-- Label + Arrow inside their own wrapper -->
+  <div class="contact-arrow-wrapper">
+    <div class="contact-label-over-arrow">Contact Information</div>
+    <img src="images/arrow.png" class="contact-arrow-image" alt="Arrow" />
+  </div>
 
-  <!-- Replaces SVG arrow with image -->
-  <img src="images/arrow.png" class="contact-arrow-image" alt="Arrow">
-
-  <!-- Yellow tab remains the same -->
+  <!-- The yellow clickable tab -->
   <div class="contact-tab"></div>
 </div>
 
