--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
     </a>
     <nav class="main-nav">
-      <a href="#about">About Us</a>
+      <a href="about.html">About Us</a>
       <a href="#gallery">Gallery</a>
       <a href="#packages">Packages</a>
       <a href="#contact">Contact Us</a>
@@ -119,7 +119,7 @@
   <div class="footer-content">
     <p>&copy; 2025 Mira Creations. All rights reserved.</p>
     <div class="footer-links">
-      <a href="#about">About</a>
+      <a href="about.html">About</a>
       <a href="#gallery">Gallery</a>
       <a href="#packages">Packages</a>
       <a href="#contact">Contact</a>
