--- a/about.html
+++ b/about.html
@@ -1,1 +1,33 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>MiraCreations</title>
+  <link rel="stylesheet" href="style.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet" />
+</head>
+<body>
 
+  <!-- HEADER AND MENU -->
+  <header class="main-header">
+    <a href="index.html" class="header-left">
+      <div class="logo-container header-logo-container">
+        <img src="images/Logo-Purple.png" class="logo header-logo purple-logo" />
+        <img src="images/Logo-Black.png" class="logo header-logo black-logo" />
+      </div>
+      <div class="brand-text">
+        <div class="brand-title">MIRA CREATIONS</div>
+        <div class="brand-subtitle">JEWELRY AND DECOR</div>
+      </div>
+    </a>
+    <nav class="main-nav">
+      <a href="about.html">About Us</a>
+      <a href="#gallery">Gallery</a>
+      <a href="#packages">Packages</a>
+      <a href="#contact">Contact Us</a>
+    </nav>
+    <div class="header-right">
+      <button class="quote-button">Free Quote</button>
+    </div>
+  </header>
