--- a/about.html
+++ b/about.html
@@ -31,3 +31,55 @@
       <button class="quote-button">Free Quote</button>
     </div>
   </header>
+
+  <!-- CONTACT SECTION -->
+<section id="contact" class="contact-section">
+  <div class="contact-content">
+    <h2 class="specialize-title">Contact Us</h2>
+
+    <form action="https://formsubmit.io/send/lakhbir-kv@hotmail.com" method="POST" class="contact-form">
+      <input type="text" name="name" placeholder="Your Name" required />
+      <input type="email" name="email" placeholder="Your Email" required />
+      <input type="tel" name="phone" placeholder="Your Phone Number" required />
+      <textarea name="message" placeholder="What do you need?" required></textarea>
+      <button type="submit">Send Message</button>
+    </form>
+  </div>
+</section>
+
+<!-- FOOTER SECTION -->
+<footer class="site-footer">
+  <div class="footer-content">
+    <p>&copy; 2025 Mira Creations. All rights reserved.</p>
+    <div class="footer-links">
+      <a href="about.html">About</a>
+      <a href="#gallery">Gallery</a>
+      <a href="#packages">Packages</a>
+      <a href="#contact">Contact</a>
+    </div>
+  </div>
+</footer>
+
+<!-- Floating Contact Ribbon + Arrow -->
+<div class="contact-tab-wrapper" id="contactTab">
+  <!-- Label + Arrow inside their own wrapper -->
+  <div class="contact-arrow-wrapper">
+    <div class="contact-label-over-arrow">Contact Information</div>
+    <img src="images/arrow.png" class="contact-arrow-image" alt="Arrow" />
+  </div>
+
+  <!-- The yellow clickable tab -->
+  <div class="contact-tab"></div>
+</div>
+
+
+<!-- Overlay and Popup Card -->
+<div class="contact-overlay" id="contactOverlay">
+  <div class="contact-popup">
+    <h3>Contact Information</h3>
+    <p><strong>Location:</strong> Edmonton, Alberta</p>
+    <p><strong>Phone:</strong> <a href="tel:5877090058">587-709-0058</a></p>
+    <p><strong>Email:</strong> <a href="mailto:lakhbir-kv@hotmail.com">lakhbir-kv@hotmail.com</a></p>
+    <p><strong>Instagram:</strong> <a href="https://instagram.com/miracreations1" target="_blank">@miracreations1</a></p>
+  </div>
+</div>
