--- a/index.html
+++ b/index.html
@@ -29,13 +29,15 @@
     </nav>
     <div class="header-right">
       <button class="quote-button">Free Quote</button>
-      <div class="hamburger" id="hamburger">
+</div>
+  </header>
+
+  <!-- HAMBURGER MENU -->
+    <div class="hamburger" id="hamburger">
     <span></span>
     <span></span>
     <span></span>
   </div>
-</div>
-  </header>
 
 <!-- WELCOME SECTION -->
 <section class="welcome-section">
