--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <!-- HEADER AND MENU -->
+<!-- HEADER AND MENU -->
   <header class="main-header">
     <a href="index.html" class="header-left">
       <div class="logo-container header-logo-container">
@@ -29,8 +29,15 @@
     </nav>
     <div class="header-right">
       <button class="quote-button">Free Quote</button>
-    </div>
+</div>
   </header>
+
+  <!-- HAMBURGER MENU -->
+    <div class="hamburger" id="hamburger">
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
 
   <!-- CONTACT SECTION -->
 <section id="contact" class="contact-section">
