--- a/about.html
+++ b/about.html
@@ -91,6 +91,17 @@
   </div>
 </div>
 
+<!-- MOBILE HEADER/MENU -->
+<div class="mobile-nav" id="mobileNav">
+  <nav class="mobile-menu-links">
+    <a href="about.html">About Us</a>
+    <a href="#gallery">Gallery</a>
+    <a href="#packages">Packages</a>
+    <a href="#contact">Contact Us</a>
+    <button class="mobile-quote-button">Free Quote</button>
+  </nav>
+</div>
+
 <script>
   const contactTab = document.getElementById('contactTab');
   const contactOverlay = document.getElementById('contactOverlay');
