--- a/about.html
+++ b/about.html
@@ -116,3 +116,19 @@
     }
   });
 </script>
+  
+<!-- MOBILE SCRIPTS -->
+
+<script>
+  const hamburger = document.getElementById('hamburger');
+  const mobileNav = document.getElementById('mobileNav');
+
+  hamburger.addEventListener('click', () => {
+    mobileNav.classList.toggle('active');
+  });
+
+  // Optional: Close on link click
+  document.querySelectorAll('.mobile-menu-links a').forEach(link => {
+    link.addEventListener('click', () => mobileNav.classList.remove('active'));
+  });
+</script>
