--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
   <!-- Label + Arrow inside their own wrapper -->
   <div class="contact-arrow-wrapper">
     <div class="contact-label-over-arrow">Contact Information</div>
-    <img src="images/arrow.png" class="contact-arrow-image" alt="Arrow" />
+    <img src="images/arrow-black.png" class="contact-arrow-image" alt="Arrow" />
   </div>
 
   <!-- The yellow clickable tab -->
