--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
   <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet" />
 </head>
-<body>
+<body class="about-page">
 
 <!-- HEADER AND MENU -->
   <header class="main-header">
