--- a/about.html
+++ b/about.html
@@ -82,6 +82,15 @@
   </div>
 </section>
 
+  <!-- GALLERY CTA SECTION -->
+<section class="gallery-cta-section">
+  <div class="gallery-cta-content">
+    <h2 class="gallery-cta-title">See Our Work in Action</h2>
+    <p class="gallery-cta-subtext">From weddings to cultural celebrations, explore how Mira Creations brings elegant visions to life.</p>
+    <a href="products.html" class="gallery-cta-button">Browse Our Gallery</a>
+  </div>
+</section>
+
   <!-- CONTACT SECTION -->
 <section id="contact" class="contact-section">
   <div class="contact-content">
