--- a/about.html
+++ b/about.html
@@ -57,6 +57,13 @@
   </div>
 </section>
 
+<!-- DIVIDER BETWEEN FOUNDER & REVIEW SECTIONS -->
+<div class="section-divider">
+  <div class="specialize-line"></div>
+  <img src="images/Logo-Black.png" alt="Logo" class="specialize-logo" />
+  <div class="specialize-line"></div>
+</div>
+
 <!-- REVIEW SECTION -->
 <section class="testimonial-carousel">
   <h2 class="testimonial-title">What Our Clients Say</h2>
@@ -82,7 +89,14 @@
   </div>
 </section>
 
-  <!-- GALLERY CTA SECTION -->
+<!-- DIVIDER BETWEEN REVIEW & GALLERY SECTIONS -->
+<div class="section-divider">
+  <div class="specialize-line"></div>
+  <img src="images/Logo-Black.png" alt="Logo" class="specialize-logo" />
+  <div class="specialize-line"></div>
+</div>
+
+<!-- GALLERY CTA SECTION -->
 <section class="gallery-cta-section">
   <div class="gallery-cta-content">
     <h2 class="gallery-cta-title">See Our Work in Action</h2>
@@ -91,6 +105,13 @@
   </div>
 </section>
 
+<!-- DIVIDER BETWEEN GALLERY & CONTACT SECTIONS -->
+<div class="section-divider">
+  <div class="specialize-line"></div>
+  <img src="images/Logo-Black.png" alt="Logo" class="specialize-logo" />
+  <div class="specialize-line"></div>
+</div>
+  
   <!-- CONTACT SECTION -->
 <section id="contact" class="contact-section">
   <div class="contact-content">
