--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
     </a>
     <nav class="main-nav">
       <a href="about.html">About Us</a>
-      <a href="#gallery">Gallery</a>
+      <a href="gallery.html">Gallery</a>
       <a href="#packages">Packages</a>
       <a href="#contact">Contact Us</a>
     </nav>
@@ -101,7 +101,7 @@
   <div class="gallery-cta-content">
     <h2 class="gallery-cta-title">See Our Work in Action</h2>
     <p class="gallery-cta-subtext">From weddings to cultural celebrations, explore how Mira Creations brings elegant visions to life.</p>
-    <a href="products.html" class="gallery-cta-button">Browse Our Gallery</a>
+    <a href="gallery.html" class="gallery-cta-button">Browse Our Gallery</a>
   </div>
 </section>
 
@@ -133,7 +133,7 @@
     <p>&copy; 2025 Mira Creations. All rights reserved.</p>
     <div class="footer-links">
       <a href="about.html">About</a>
-      <a href="#gallery">Gallery</a>
+      <a href="gallery.html">Gallery</a>
       <a href="#packages">Packages</a>
       <a href="#contact">Contact</a>
     </div>
@@ -168,7 +168,7 @@
 <div class="mobile-nav" id="mobileNav">
   <nav class="mobile-menu-links">
     <a href="about.html">About Us</a>
-    <a href="#gallery">Gallery</a>
+    <a href="gallery.html">Gallery</a>
     <a href="#packages">Packages</a>
     <a href="#contact">Contact Us</a>
     <button class="mobile-quote-button">Free Quote</button>
