--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </a>
     <nav class="main-nav">
       <a href="about.html">About Us</a>
-      <a href="#gallery">Gallery</a>
+      <a href="gallery.html">Gallery</a>
       <a href="#packages">Packages</a>
       <a href="#contact">Contact Us</a>
     </nav>
@@ -127,7 +127,7 @@
     <p>&copy; 2025 Mira Creations. All rights reserved.</p>
     <div class="footer-links">
       <a href="about.html">About</a>
-      <a href="#gallery">Gallery</a>
+      <a href="gallery.html">Gallery</a>
       <a href="#packages">Packages</a>
       <a href="#contact">Contact</a>
     </div>
@@ -162,7 +162,7 @@
 <div class="mobile-nav" id="mobileNav">
   <nav class="mobile-menu-links">
     <a href="about.html">About Us</a>
-    <a href="#gallery">Gallery</a>
+    <a href="gallery.html">Gallery</a>
     <a href="#packages">Packages</a>
     <a href="#contact">Contact Us</a>
     <button class="mobile-quote-button">Free Quote</button>
