--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
       <div class="card" style="background-image: url('images/Card6.jpg');"><span>Table & Centrepiece Styling</span></div>
     </div>
 
-    <a href="products.html" class="specialize-button">Check Out Our Gallery</a>
+    <a href="gallery.html" class="specialize-button">Check Out Our Gallery</a>
   </div>
 </section>
 
