--- a/gallery.html
+++ b/gallery.html
@@ -39,6 +39,14 @@
     <span></span>
   </div>
 
+<!-- GALLERY PAGE TITLE SECTION -->
+<section class="gallery-intro">
+  <div class="gallery-intro-content">
+    <h1 class="gallery-title">Our Gallery</h1>
+    <p class="gallery-subtitle">Explore the stunning designs and decor pieces we’ve created for unforgettable celebrations.</p>
+  </div>
+</section>
+
   <!-- CONTACT SECTION -->
 <section id="contact" class="contact-section">
   <div class="contact-content">
