--- a/gallery.html
+++ b/gallery.html
@@ -53,53 +53,81 @@
   <!-- Wedding Decor -->
   <div class="gallery-category">
     <h2>Wedding Decor</h2>
-    <div class="carousel track-wedding">
-      <img src="images/gallery/wedding1.jpg" alt="Wedding 1" />
-      <img src="images/gallery/wedding2.jpg" alt="Wedding 2" />
-      <img src="images/gallery/wedding3.jpg" alt="Wedding 3" />
-      <img src="images/gallery/wedding4.jpg" alt="Wedding 4" />
-      <img src="images/gallery/wedding5.jpg" alt="Wedding 5" />
+    <div class="carousel-wrapper">
+      <div class="carousel track-wedding">
+        <img src="images/gallery/wedding1.jpg" alt="Wedding 1" />
+        <img src="images/gallery/wedding2.jpg" alt="Wedding 2" />
+        <img src="images/gallery/wedding3.jpg" alt="Wedding 3" />
+        <img src="images/gallery/wedding4.jpg" alt="Wedding 4" />
+        <img src="images/gallery/wedding5.jpg" alt="Wedding 5" />
+        <img src="images/gallery/wedding1.jpg" alt="Wedding 1 clone" />
+        <img src="images/gallery/wedding2.jpg" alt="Wedding 2 clone" />
+        <img src="images/gallery/wedding3.jpg" alt="Wedding 3 clone" />
+        <img src="images/gallery/wedding4.jpg" alt="Wedding 4 clone" />
+        <img src="images/gallery/wedding5.jpg" alt="Wedding 5 clone" />
+      </div>
     </div>
   </div>
 
   <!-- Special Events Decor -->
   <div class="gallery-category">
     <h2>Special Events Decor</h2>
-    <div class="carousel track-event">
-      <img src="images/gallery/event1.jpg" alt="Event 1" />
-      <img src="images/gallery/event2.jpg" alt="Event 2" />
-      <img src="images/gallery/event3.jpg" alt="Event 3" />
-      <img src="images/gallery/event4.jpg" alt="Event 4" />
-      <img src="images/gallery/event5.jpg" alt="Event 5" />
+    <div class="carousel-wrapper">
+      <div class="carousel track-event">
+        <img src="images/gallery/event1.jpg" alt="Event 1" />
+        <img src="images/gallery/event2.jpg" alt="Event 2" />
+        <img src="images/gallery/event3.jpg" alt="Event 3" />
+        <img src="images/gallery/event4.jpg" alt="Event 4" />
+        <img src="images/gallery/event5.jpg" alt="Event 5" />
+        <img src="images/gallery/event1.jpg" alt="Event 1 clone" />
+        <img src="images/gallery/event2.jpg" alt="Event 2 clone" />
+        <img src="images/gallery/event3.jpg" alt="Event 3 clone" />
+        <img src="images/gallery/event4.jpg" alt="Event 4 clone" />
+        <img src="images/gallery/event5.jpg" alt="Event 5 clone" />
+      </div>
     </div>
   </div>
 
   <!-- Jewelry -->
   <div class="gallery-category">
     <h2>Jewelry</h2>
-    <div class="carousel track-jewelry">
-      <img src="images/gallery/jewelry1.jpg" alt="Jewelry 1" />
-      <img src="images/gallery/jewelry2.jpg" alt="Jewelry 2" />
-      <img src="images/gallery/jewelry3.jpg" alt="Jewelry 3" />
-      <img src="images/gallery/jewelry4.jpg" alt="Jewelry 4" />
-      <img src="images/gallery/jewelry5.jpg" alt="Jewelry 5" />
+    <div class="carousel-wrapper">
+      <div class="carousel track-jewelry">
+        <img src="images/gallery/jewelry1.jpg" alt="Jewelry 1" />
+        <img src="images/gallery/jewelry2.jpg" alt="Jewelry 2" />
+        <img src="images/gallery/jewelry3.jpg" alt="Jewelry 3" />
+        <img src="images/gallery/jewelry4.jpg" alt="Jewelry 4" />
+        <img src="images/gallery/jewelry5.jpg" alt="Jewelry 5" />
+        <img src="images/gallery/jewelry1.jpg" alt="Jewelry 1 clone" />
+        <img src="images/gallery/jewelry2.jpg" alt="Jewelry 2 clone" />
+        <img src="images/gallery/jewelry3.jpg" alt="Jewelry 3 clone" />
+        <img src="images/gallery/jewelry4.jpg" alt="Jewelry 4 clone" />
+        <img src="images/gallery/jewelry5.jpg" alt="Jewelry 5 clone" />
+      </div>
     </div>
   </div>
 
   <!-- Suits and Kurtas
   <div class="gallery-category">
     <h2>Suits and Kurtas</h2>
-    <div class="carousel track-clothing">
-      <img src="images/gallery/clothing1.jpg" alt="Clothing 1" />
-      <img src="images/gallery/clothing2.jpg" alt="Clothing 2" />
-      <img src="images/gallery/clothing3.jpg" alt="Clothing 3" />
-      <img src="images/gallery/clothing4.jpg" alt="Clothing 4" />
-      <img src="images/gallery/clothing5.jpg" alt="Clothing 5" />
+    <div class="carousel-wrapper">
+      <div class="carousel track-clothing">
+        <img src="images/gallery/clothing1.jpg" alt="Clothing 1" />
+        <img src="images/gallery/clothing2.jpg" alt="Clothing 2" />
+        <img src="images/gallery/clothing3.jpg" alt="Clothing 3" />
+        <img src="images/gallery/clothing4.jpg" alt="Clothing 4" />
+        <img src="images/gallery/clothing5.jpg" alt="Clothing 5" />
+        <img src="images/gallery/clothing1.jpg" alt="Clothing 1 clone" />
+        <img src="images/gallery/clothing2.jpg" alt="Clothing 2 clone" />
+        <img src="images/gallery/clothing3.jpg" alt="Clothing 3 clone" />
+        <img src="images/gallery/clothing4.jpg" alt="Clothing 4 clone" />
+        <img src="images/gallery/clothing5.jpg" alt="Clothing 5 clone" />
+      </div>
     </div>
-  </div> 
+  </div>
 
   -->
-
+  
   <!-- Modal Viewer -->
   <div class="image-modal" id="imageModal">
     <span class="close-button" id="modalClose">&times;</span>
